@@ -100,6 +100,7 @@
 // External functions
 extern std::string cfgFile;		//Contains the filename of the config file used.
 extern bool turbo;				//Is game in turbo mode?
+extern int FCEU_LoadLuaCode(const char *filename);	//From lua-engine.cpp.  Used here to auto-load a lua script from commandline
 void ResetVideo(void);
 void ShowCursorAbs(int w);
 void HideFWindow(int h);
@@ -678,6 +679,12 @@ int main(int argc,char *argv[])
 		FCEUI_LoadState(StateToLoad);
 		free(StateToLoad);
 		StateToLoad = NULL;
+	}
+	if(LuaToLoad);
+	{
+		FCEU_LoadLuaCode(LuaToLoad);
+		free(LuaToLoad);
+		LuaToLoad = NULL;
 	}
 	if (MemWatchLoadOnStart) CreateMemWatch();
 	if (PauseAfterLoad) FCEUI_ToggleEmulationPause();
